packages/shulker-operator/src/reconcilers/minecraft_server_fleet/snapshots/shulker_operator__reconcilers__minecraft_server_fleet__fleet__tests__update_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/minecraft_server_fleet/fleet.rs
expression: fleet
---
apiVersion: agones.dev/v1
kind: Fleet
metadata:
  labels:
    app.kubernetes.io/component: minecraftserver
    app.kubernetes.io/name: my-server
    minecraftcluster.shulkermc.io/name: my-cluster
    minecraftserverfleet.shulkermc.io/name: my-server
  name: my-server
  namespace: default
spec:
  replicas: 0
  strategy:
    type: Recreate
  scheduling: Packed
  template:
    metadata:
      annotations:
        minecraftserver.shulkermc.io/tags: lobby
        test-annotation/shulkermc.io: my-value
      labels:
        app.kubernetes.io/component: minecraftserver
        app.kubernetes.io/name: my-server
        minecraftcluster.shulkermc.io/name: my-cluster
        minecraftserverfleet.shulkermc.io/name: my-server
        test-label/shulkermc.io: my-value
    spec:
      ports:
        - name: minecraft
          containerPort: 25565
          protocol: TCP
      health:
        disabled: false
        periodSeconds: 15
        failureThreshold: 5
        initialDelaySeconds: 30
      template:
        metadata:
          annotations:
            minecraftserver.shulkermc.io/tags: lobby
          labels:
            app.kubernetes.io/component: minecraftserver
            app.kubernetes.io/name: my-server
            minecraftcluster.shulkermc.io/name: my-cluster
        spec:
          containers:
            - env:
                - name: SHULKER_SERVER_NAME
                  valueFrom:
                    fieldRef:
                      fieldPath: metadata.name
                - name: SHULKER_SERVER_NAMESPACE
                  valueFrom:
                    fieldRef:
                      fieldPath: metadata.namespace
                - name: TYPE
                  value: PAPER
                - name: VERSION
                  value: 1.20.1
                - name: EULA
                  value: "TRUE"
                - name: COPY_CONFIG_DEST
                  value: /data
                - name: SYNC_SKIP_NEWER_IN_DESTINATION
                  value: "true"
                - name: SKIP_SERVER_PROPERTIES
                  value: "true"
                - name: REPLACE_ENV_IN_PLACE
                  value: "true"
                - name: REPLACE_ENV_VARIABLE_PREFIX
                  value: CFG_
                - name: CFG_VELOCITY_FORWARDING_SECRET
                  valueFrom:
                    secretKeyRef:
                      key: key
                      name: my-cluster-forwarding-secret
                - name: MEMORY
                  value: ""
                - name: JVM_XX_OPTS
                  value: "-XX:MaxRAMPercentage=75"
                - name: EXTRA_ENV
                  value: my_value
              image: "itzg/minecraft-server:2022.16.0-java17"
              imagePullPolicy: IfNotPresent
              name: minecraft-server
              securityContext:
                allowPrivilegeEscalation: false
                capabilities:
                  drop:
                    - ALL
                readOnlyRootFilesystem: true
                runAsNonRoot: true
                runAsUser: 1000
              volumeMounts:
                - mountPath: /config
                  name: server-config
                - mountPath: /data
                  name: server-data
                - mountPath: /tmp
                  name: server-tmp
          initContainers:
            - command:
                - sh
                - /mnt/shulker/config/init-fs.sh
              env:
                - name: SHULKER_CONFIG_DIR
                  value: /mnt/shulker/config
                - name: SERVER_CONFIG_DIR
                  value: /config
                - name: SERVER_DATA_DIR
                  value: /data
                - name: TYPE
                  value: PAPER
                - name: SHULKER_SERVER_AGENT_VERSION
                  value: 0.1.0
                - name: SHULKER_MAVEN_REPOSITORY
                  value: "https://maven.jeremylvln.fr/artifactory/shulker"
              image: "alpine:latest"
              name: init-fs
              securityContext:
                allowPrivilegeEscalation: false
                capabilities:
                  drop:
                    - ALL
                readOnlyRootFilesystem: true
                runAsNonRoot: true
                runAsUser: 1000
              volumeMounts:
                - mountPath: /mnt/shulker/config
                  name: shulker-config
                  readOnly: true
                - mountPath: /config
                  name: server-config
          nodeSelector:
            beta.kubernetes.io/os: linux
          restartPolicy: Never
          serviceAccountName: my-cluster-server
          volumes:
            - configMap:
                name: my-server-config
              name: shulker-config
            - emptyDir: {}
              name: server-config
            - emptyDir: {}
              name: server-data
            - emptyDir: {}
              name: server-tmp
      eviction:
        safe: OnUpgrade

